--- a/helloworld/deployment.yaml
+++ b/helloworld/deployment.yaml
@@ -1,6 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    apps.open-cluster-management.io/do-not-delete: 'true'
   name: helloworld-app-deploy
   labels:
     app: helloworld-app
