--- a/subscriptions/helloworld/subscription.yaml
+++ b/subscriptions/helloworld/subscription.yaml
@@ -8,6 +8,7 @@ metadata:
   annotations:
     apps.open-cluster-management.io/github-path: helloworld
     apps.open-cluster-management.io/github-branch: main
+    apps.open-cluster-management.io/reconcile-rate: "off"
 spec:
   channel: helloworld-ch/helloworld-channel
   placement:
